Fix macro animation alignment
Padding on left offsets width of dropdown button (center text relative to whole button group). This previously worked for text labels (h3) but not for animations. Fixed by wrapping animations inside h3 like text.

Reduce options dropdown width, set fixed button height to fix slight jump when animation runs

--- a/frontend/node_configuration/react_components/css/dark_mode.scss
+++ b/frontend/node_configuration/react_components/css/dark_mode.scss
@@ -38,13 +38,6 @@
     }
 }
 
-/* Macro buttons */
-.btn-macro {
-    height: 3rem;
-    width: 3rem;
-    padding: 0px !important;
-}
-
 @media (prefers-color-scheme: dark) {
     :root {
         /* redefine theme colors for dark theme */
